--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ianwalter/cli",
   "description": "A utility to help build command-line and package.json driven applications",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "author": "Ian Walter <public@iankwalter.com> (https://iankwalter.com)",
   "main": "index.js",
   "scripts": {
@@ -39,7 +39,8 @@
   "devDependencies": {
     "@ianwalter/bff": "2.4.2",
     "@ianwalter/eslint-config": "^1.1.2",
-    "execa": "^1.0.0"
+    "execa": "^1.0.0",
+    "np": "^4.0.2"
   },
   "exampleCli": {
     "level": "debug",
