--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint index.js tests",
+    "example": "./tests/fixtures/exampleCli.js",
     "test": "bff"
   },
   "license": "SEE LICENSE IN LICENSE",
@@ -32,19 +33,26 @@
   },
   "homepage": "https://github.com/ianwalter/cli#readme",
   "dependencies": {
+    "dot-prop": "^5.0.0",
     "getopts": "^2.2.4",
     "pkg-conf": "^3.1.0",
     "yargs": "^13.2.2"
   },
   "devDependencies": {
-    "@ianwalter/bff": "3.0.0",
+    "@ianwalter/bff": "3.0.1",
     "@ianwalter/eslint-config": "^1.1.2",
     "execa": "^1.0.0",
     "np": "^5.0.0"
   },
   "exampleCli": {
     "level": "debug",
-    "concurrency": 2
+    "concurrency": 2,
+    "some": {
+      "thing": true,
+      "other": {
+        "thing": "a"
+      }
+    }
   },
   "eslintConfig": {
     "root": true,
