--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@ianwalter/bff": "4.0.1",
     "@ianwalter/eslint-config": "^1.1.2",
+    "@ianwalter/renovate-config": "^1.1.0",
     "execa": "^1.0.0",
     "np": "^5.0.0"
   },
@@ -57,6 +58,11 @@
   },
   "eslintConfig": {
     "root": true,
+    "extends": [
+      "@ianwalter"
+    ]
+  },
+  "renovate": {
     "extends": [
       "@ianwalter"
     ]
