Replacing np with release

--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   "devDependencies": {
     "@ianwalter/bff": "^6.4.0",
     "@ianwalter/eslint-config": "^2.1.1",
+    "@ianwalter/release": "^1.1.7",
     "@ianwalter/renovate-config": "^1.1.1",
-    "execa": "^2.0.3",
-    "np": "^5.0.3"
+    "execa": "^2.0.3"
   },
   "exampleCli": {
     "level": "debug",
